# libemf2svg

./: .codecov.yml  .coveralls.yml  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml  vcpkg.json
.github/workflows/: Build.yml  Coverage.yml  alpine-build.yml  alpine-x86_64.yml  build.yml  cmake.yml  emf2svg-alpine-x86_64.yml  emf2svg-macos-arm64.yml  emf2svg-macos-x86_64.yml  emf2svg-msys-x86_64.yml  emf2svg-ubuntu-aarch64.yml  emf2svg-ubuntu-x86_64.yml  emf2svg-windows-x86_64.yml  macos-arm64.yml  macos-build.yml  macos-x86_64.yml  msys-x86_64.yml  release.yml  ubuntu-aarch64.yml  ubuntu-arm64.yml  ubuntu-build.yml  ubuntu-x86_64.yml  windows-build.yml  windows-x86_64.yml
cmake/: CodeCoverage.cmake  Finduemf.cmake  arm64-linux.cmake  arm64-osx.cmake  x64-osx.cmake
goodies/: TODO  check_emfp.c  convert_all.c  example.c  format  mapping_builder.pl  out-example.svgz  record_status.sh  reorg.py
inc/: EMFSVG.h  EMFSVG_print.h  EMFSVG_private.h  PMFSVG.h  PMFSVG_print.h  SVGDrawingGenerator.h  clipperWrapper.h  emf2svg.h  emf2svg_img_utils.h  emf2svg_print.h  emf2svg_private.h  font_mapping.c  font_mapping.h  internal-fmem.h  pmf2svg.h  pmf2svg_print.h  uemf.h  uemf_endian.h  uemf_utf.h  upmf.h
libUEMF-0.2.5/: README  readwmf.c  uemf.c  uemf_endian.c  uemf_endian.h  uemf_utf.h  upmf.h  upmf_print.c  upmf_print.h  uwmf.h  uwmf_endian.c  uwmf_print.c
patches/argp/: CMakeLists.txt.patch
src/conv/: emf2svg.cpp
src/lib/: EMFSVG.c  EMFSVG.cpp  EMFSVG_print.c  PMFSVG.c  PMFSVG.cpp  PMFSVG_print.c  clipperWrapper.cpp  emf2svg.c  emf2svg_clip_utils.c  emf2svg_img_utils.c  emf2svg_print.c  emf2svg_rec_bitmap.c  emf2svg_rec_clipping.c  emf2svg_rec_comment.c  emf2svg_rec_control.c  emf2svg_rec_drawing.c  emf2svg_rec_escape.c  emf2svg_rec_object_creation.c  emf2svg_rec_object_manipulation.c  emf2svg_rec_path.c  emf2svg_rec_state_record.c  emf2svg_rec_transform.c  emf2svg_utils.c  memstream.c  pmf2svg.c  pmf2svg_print.c  uemf.c  uemf_endian.c  uemf_utf.c  upmf.c
test.files/: Fig Primitives of Zone Class.emf
tests/: test.c
tests/resources/: check_correctness.sh  check_corrupted.sh  check_truncate.sh  colors.sh  coverage.sh  lcheck.sh
tests/resources/emf/: test-001.emf  test-002.emf  test-003.emf  test-004.emf  test-005.emf  test-006.emf  test-007.emf  test-008.emf  test-009.emf  test-010.emf  test-011.emf  test-012.emf  test-013.emf  test-014.emf  test-015.emf  test-016.emf  test-017.emf  test-018.emf  test-019.emf  test-020.emf  test-021.emf  test-022.emf  test-023.emf  test-024.emf  test-025.emf  test-026.emf  test-027.emf  test-028.emf  test-029.emf  test-030.emf  test-031.emf  test-032.emf  test-033.emf  test-034.emf  test-035.emf  test-036.emf  test-037.emf  test-040.emf  test-044.emf  test-046.emf  (+134 more)
tests/resources/emf-corrupted/: README.md  bad_corrupted_2014-12-02-215338.emf  bad_corrupted_2014-12-02-215339.emf  bad_corrupted_2014-12-02-215358.emf  bad_corrupted_2014-12-02-215400.emf  bad_corrupted_2014-12-02-215425.emf  bad_corrupted_2014-12-02-215428.emf  bad_corrupted_2014-12-07-140817.emf  bad_corrupted_2014-12-07-160856.emf  bad_corrupted_2014-12-07-163010.emf  bad_corrupted_2014-12-07-235709.emf  bad_corrupted_2014-12-09-002112.emf  bad_corrupted_2014-12-13-105759.emf  bad_corrupted_2014-12-13-132605.emf  bad_corrupted_2014-12-13-133727.emf  bad_corrupted_2014-12-14-080539.emf  bad_corrupted_2016-02-02-210039.emf  bad_corrupted_2016-02-02-220639.emf  bad_corrupted_2016-02-02-225639.emf  bad_corrupted_2017-02-11-230400.emf  bad_corrupted_2017-02-12-010400.emf  bad_corrupted_2017-05-12-074000.emf
tests/resources/emf-ea/: EA-test-file-001.emf  EA-test-file-002.emf  EA-test-file-003.emf  EA-test-file-005.emf  EA-test-file-006.emf  EA-test-file-007.emf  EA-test-file-009.emf  EA-test-file-010.emf  EA-test-file-011.emf  EA-test-file-012.emf  EA-test-file-013.emf  EA-test-file-015.emf  EA-test-file-020.emf  EA-test-file-032.emf  EA-test-file-101.emf  EA-test-file-102.emf  EA-test-file-4.emf  EA-test-file-8.emf  EAID_0A3C71C2_F9AE_4039_B4D6_B0CC1810E742.emf  EAID_0A8C033C_7E43_4414_92A7_0E51CA3E17D8.emf
tests/resources/filesmasher-master/: .gitignore  Makefile  README.md  arand.c  arand.h  main.c  range.c  range.h
